Cambios para integración con el back

--- a/src/app/cofrades/addModify/cofradeAddModify.html
+++ b/src/app/cofrades/addModify/cofradeAddModify.html
@@ -45,7 +45,7 @@
           <md-tab-label>
             <md-icon md-font-library="material-icons">person</md-icon>
           </md-tab-label>
-          <md-content class="md-padding">
+          <md-tab-body class="md-padding">
             <h1>Datos personales</h1>
             
             <div layout layout-sm="column">
@@ -232,7 +232,7 @@
                 <textarea ng-model="vm.cofrade.datosPersonales.nota"></textarea>
               </md-input-container>
             </div>
-          </md-content>
+          </md-tab-body>
         </md-tab>
 
         <!-- DATOS FINANCIEROS -->
@@ -240,7 +240,7 @@
           <md-tab-label>
             <md-icon md-font-library="material-icons">account_balance</md-icon>
           </md-tab-label>
-          <md-content class="md-padding">
+          <md-tab-body class="md-padding">
             <h1>Datos bancarios</h1>
             <div layout="column">
               <md-input-container class="md-icon-float" flex="50">
@@ -293,7 +293,7 @@
               </md-checkbox>
             </div>
 
-          </md-content>
+          </md-tab-body>
         </md-tab>
         
         <!-- DATOS LOTERIA -->
@@ -301,7 +301,7 @@
           <md-tab-label>
             <md-icon md-font-library="material-icons">local_play</md-icon>
           </md-tab-label>
-          <md-content class="md-padding">
+          <md-tab-body class="md-padding">
             <h1>Datos Loteria</h1>
             <div layout layout-sm="column">
               <md-input-container class="md-icon-float" flex="50">
@@ -350,7 +350,7 @@
               </md-checkbox>
             </div>
             
-          </md-content>
+          </md-tab-body>
         </md-tab>
       </md-tabs>
     
