--- a/src/app/index_app.html
+++ b/src/app/index_app.html
@@ -6,13 +6,12 @@
     <meta charset="UTF-8" />
     <title>Gestion CJN</title>
     <!-- bower:css -->
-    <link rel="stylesheet" href="libs/angular-material/angular-material.css" />
     <!-- endbower -->
     <link href="css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
     
-  <body layout="column" ng-controller='AppCtrl as app'>
+  <body layout="column" ng-controller='AppCtrl as app' ng-cloak>
 
     <md-toolbar layout="row">
       <div class="md-toolbar-tools">
@@ -88,16 +87,6 @@
       </div>
     </div>
     <!-- bower:js -->
-    <script src="libs/angular/angular.js"></script>
-    <script src="libs/angular-simple-logger/dist/angular-simple-logger.js"></script>
-    <script src="libs/lodash/lodash.js"></script>
-    <script src="libs/angular-google-maps/dist/angular-google-maps.js"></script>
-    <script src="libs/angular-animate/angular-animate.js"></script>
-    <script src="libs/angular-aria/angular-aria.js"></script>
-    <script src="libs/angular-material/angular-material.js"></script>
-    <script src="libs/angular-messages/angular-messages.js"></script>
-    <script src="libs/angular-resource/angular-resource.js"></script>
-    <script src="libs/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <script src="js/all.min.js"></script>
     <script src="templates/templates.js"></script>
