Inserción del opción de logout

--- a/src/app/index_app.html
+++ b/src/app/index_app.html
@@ -19,6 +19,11 @@
           <md-icon md-font-library="material-icons">menu</md-icon>
         </md-button>
         <h1>Gestion CJN</h1>
+      
+        <span flex></span>
+        <md-button class="md-icon-button md-warn" href="/logout">
+          <md-icon md-font-library="material-icons">exit_to_app</md-icon>
+        </md-button>
       </div>
     </md-toolbar>
 
